# backend

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tree.txt
api/routes/: lobby.py
api/services/: auth_service.py
app/: main.py
app/api/errors/: conflict_exception.py  custom_exception.py  email_already_exists_exception.py  internal_server_error.py  invalid_password_exception.py  no_user_with_email_exception.py  not_found_exception.py  user_have_organization.py
app/api/host/repositories/: agent_repository.py  process_repository.py
app/api/host/routes/: __init__.py  agent_route.py  process_route.py
app/api/host/services/: agent_service.py  process_service.py
app/api/models/: agent.py  agent_model.py  group_model.py  organization_model.py  process_model.py  rule.py  rule_model.py  user.py  user_model.py
app/api/models/query/: agent_embed_query_model.py  process_embed_query_model.py
app/api/repositories/: agent_repository.py  process_repository.py  rule_repository.py  user_repository.py  users_repository.py
app/api/routes/: __init__.py  agent_route.py  auth.py  auth_route.py  process_route.py  rule_route.py  user_route.py
app/api/services/: agent_service.py  auth_service.py  jwt_service.py  process_service.py  rule_service.py  user_service.py
app/api/ui/models/: auth_model.py  dashboard_model.py  user_model.py
app/api/ui/repositories/: agent_repository.py  auth_repository.py  (+5 more)
app/core/: app.py  auth.py  config.py  db.py
app/core/database/: db.py
database/: connection.py
static/: install-agent.sh
(+21 files in other folders)
